--- a/index.html
+++ b/index.html
@@ -1,44 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="style.css"/>
     <title>Document</title>
-  </head>
-  <body>
-    <main>
-      <div class="main_content_wrapper">
+</head>
+<body>
+<main>
+    <div class="main_content_wrapper">
         <header class="header">
-          <img src="img/image 4.svg" alt="" />
+            <img src="img/image 4.svg" alt=""/>
         </header>
 
         <section class="last_chanse">
-          <div class="last_chanse_content">
-            <div class="first-title">
-              <p>
-                <span class="title_color">Общество.</span> Последний шанс. 15
-                мая 2021
-              </p>
+            <div class="last_chanse_content">
+                <div class="first-title">
+                    <p>
+                        <span class="title_color">Общество.</span> Последний шанс. 15
+                        мая 2021
+                    </p>
+                </div>
+                <div class="last-title">
+                    <p>
+                        Каждый в ответе за будущее человечества.
+                        <span class="title_color">Каким оно будет?</span>
+                    </p>
+                </div>
             </div>
-            <div class="last-title">
-              <p>
-                Каждый в ответе за будущее человечества.
-                <span class="title_color">Каким оно будет?</span>
-              </p>
-            </div>
-          </div>
         </section>
 
-        <section class="soc_idea">
-          <p>
-            Любой человек хочет быть счастливым. Но можем ли мы назвать
-            счастливым наше общество? Каждый из нас наверняка хотел бы жить в
-            мире, в котором действительно счастлив он, его семья и все люди. Но
-            каким мы видим мир сегодня?
-          </p>
+        <section class="description">
+            <div class="description_wrapper">
+                <p>Любой человек хочет быть счастливым. Но можем ли мы назвать счастливым наше общество?
+                    Каждый из нас наверняка хотел бы жить в мире, в котором действительно счастлив он, его семья и все
+                    люди.
+                    Но каким мы видим мир сегодня?</p>
+            </div>
         </section>
-      </div>
-    </main>
-  </body>
+
+        <section class="rectangle_22">
+
+        </section>
+
+    </div>
+</main>
+</body>
 </html>
