--- a/index.html
+++ b/index.html
@@ -39,11 +39,20 @@
             </div>
         </section>
 
-        <section class="rectangle_22">
-
+        <section class="rectangle22">
+            <div class="rectangle22_wrapper">
+                <div class="img_block">
+                    <img src="img/22.svg" alt="" class="description_img">
+                </div>
+                <div class="text_block">
+                    <p>Реалии современности: военные угрозы и конфликты, геополитическая напряжённость, миллионы беженцев, умирающие от голода дети, экономические кризисы — и это всё на фоне стремительно нарастающих климатических катастроф, которые ставят человечество перед ключевым выбором между выживанием или гибелью цивилизации.</p>
+                    <p>И это всё результат потребительского формата общества. О таком ли мире мы с вами мечтаем? Разве такое будущее мы хотим для наших детей и внуков? Разве это тот мир, в котором мы сами хотим жить</p>
+                </div>
+            </div>
         </section>
 
     </div>
 </main>
 </body>
 </html>
+
