add conference block

--- a/index.html
+++ b/index.html
@@ -1,86 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="style.css"/>
     <title>Document</title>
-  </head>
-  <body>
-    <main>
-      <div class="main_content_wrapper">
+</head>
+<body>
+<main>
+    <div class="main_content_wrapper">
         <header class="header">
-          <img src="img/image 4.svg" alt="" />
+            <img src="img/image 4.svg" alt=""/>
         </header>
 
         <section class="last_chanse">
-          <div class="last_chanse_content">
-            <div class="first-title">
-              <p>
-                <span class="title_color">Общество.</span> Последний шанс. 15
-                мая 2021
-              </p>
+            <div class="last_chanse_content">
+                <div class="first-title">
+                    <p>
+                        <span class="title_color">Общество.</span> Последний шанс. 15
+                        мая 2021
+                    </p>
+                </div>
+                <div class="last-title">
+                    <p>
+                        Каждый в ответе за будущее человечества.
+                        <span class="title_color">Каким оно будет?</span>
+                    </p>
+                </div>
             </div>
-            <div class="last-title">
-              <p>
-                Каждый в ответе за будущее человечества.
-                <span class="title_color">Каким оно будет?</span>
-              </p>
-            </div>
-          </div>
         </section>
 
         <section class="description">
-          <div class="description_wrapper">
-            <p>
-              Любой человек хочет быть счастливым. Но можем ли мы назвать
-              счастливым наше общество? Каждый из нас наверняка хотел бы жить в
-              мире, в котором действительно счастлив он, его семья и все люди.
-              Но каким мы видим мир сегодня?
-            </p>
-          </div>
+            <div class="description_wrapper">
+                <p>
+                    Любой человек хочет быть счастливым. Но можем ли мы назвать
+                    счастливым наше общество? Каждый из нас наверняка хотел бы жить в
+                    мире, в котором действительно счастлив он, его семья и все люди.
+                    Но каким мы видим мир сегодня?
+                </p>
+            </div>
         </section>
 
         <section class="rectangle22">
-          <div class="rectangle22_wrapper">
-            <div class="img_block">
-              <img src="img/22.svg" alt="" class="description_img" />
+            <div class="rectangle22_wrapper">
+                <div class="img_block">
+                    <img src="img/22.svg" alt="" class="description_img"/>
+                </div>
+                <div class="text_block">
+                    <p>
+                        Реалии современности: военные угрозы и конфликты,
+                        геополитическая напряжённость, миллионы беженцев, умирающие от
+                        голода дети, экономические кризисы — и это всё на фоне
+                        стремительно нарастающих климатических катастроф, которые ставят
+                        человечество перед ключевым выбором между выживанием или гибелью
+                        цивилизации.
+                    </p>
+                    <p>
+                        И это всё результат потребительского формата общества. О таком
+                        ли мире мы с вами мечтаем? Разве такое будущее мы хотим для
+                        наших детей и внуков? Разве это тот мир, в котором мы сами хотим
+                        жить
+                    </p>
+                </div>
             </div>
-            <div class="text_block">
-              <p>
-                Реалии современности: военные угрозы и конфликты,
-                геополитическая напряжённость, миллионы беженцев, умирающие от
-                голода дети, экономические кризисы — и это всё на фоне
-                стремительно нарастающих климатических катастроф, которые ставят
-                человечество перед ключевым выбором между выживанием или гибелью
-                цивилизации.
-              </p>
-              <p>
-                И это всё результат потребительского формата общества. О таком
-                ли мире мы с вами мечтаем? Разве такое будущее мы хотим для
-                наших детей и внуков? Разве это тот мир, в котором мы сами хотим
-                жить
-              </p>
-            </div>
-          </div>
         </section>
 
         <section class="chanse">
-          <div class="chance_wrapper">
-            <h3>НО У ЧЕЛОВЕЧЕСТВА ЕСТЬ ШАНС</h3>
-            <p>
-              Уникальное событие мирового масштаба «ОБЩЕСТВО. ПОСЛЕДНИЙ ШАНС» 9
-              мая 2020 на платформе Международного общественного движения
-              «АЛЛАТРА» объединит в одном онлайн-телемосте людей из 180 стран
-              мира в открытом глобальном диалоге:
-            </p>
-            <span>«Хотим ли мы созидательное общество?»</span>
-          </div>
-          <div class="button_block">
-            <button class="chanse_button">ПРИСОЕДИНИТЬСЯ</button>
-          </div>
+            <div class="chance_wrapper">
+                <h3>НО У ЧЕЛОВЕЧЕСТВА ЕСТЬ ШАНС</h3>
+                <p>
+                    Уникальное событие мирового масштаба «ОБЩЕСТВО. ПОСЛЕДНИЙ ШАНС» 9
+                    мая 2020 на платформе Международного общественного движения
+                    «АЛЛАТРА» объединит в одном онлайн-телемосте людей из 180 стран
+                    мира в открытом глобальном диалоге:
+                </p>
+                <span>«Хотим ли мы созидательное общество?»</span>
+            </div>
+            <div class="button_block">
+                <button class="chanse_button">ПРИСОЕДИНИТЬСЯ</button>
+            </div>
         </section>
-      </div>
-    </main>
-  </body>
+
+        <section class="conference">
+            <div class="conference_wrapper">
+                <div class="conference_description">
+                    <div class="conference_description_wrapper">
+                        <p>
+                            В этом всемирном событии во вторую субботу мая 2020 года примут
+                            участие сотни тысяч людей, включая дипломатов, лидеров различных
+                            международных и некоммерческих организаций, политиков, учёных,
+                            представителей СМИ, культуры и социально активных людей из
+                            разных стран. Интерактивная видеотрансляция в режиме реального
+                            времени с синхронным переводом на разные языки мира позволит
+                            вести живой диалог между людьми разных континентов.
+                        </p>
+                        <p>
+                            На этой исторической международной видеоконференции тысячи людей
+                            со всего мира будут иметь возможность объединиться и поделиться
+                            своим мнением и видением того, каким должно быть будущее нашего
+                            общества.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="conference_image">
+                    <img src="img/Rectangle 23.svg" alt=""/>
+                </div>
+            </div>
+        </section>
+    </div>
+</main>
+</body>
 </html>
