--- a/index.html
+++ b/index.html
@@ -117,13 +117,40 @@
                         ШАНС», состоявшейся 11 мая 2019 года.
                         На ней люди озвучили наиболее острые вопросы современности и правду, которая всколыхнула мир.
                     </p>
-                    <video class="chance_video" src="https://www.youtube.com/watch?v=8zYZmIN4FDc" width="540px" height="300px" controls="controls" poster="img/Frame 44.svg"></video>
+                    <video class="chance_video" src="" width="540px" height="300px" controls="controls"
+                        poster="img/Frame 44.svg"></video>
                     <p>Люди поняли: для того чтобы в мире действительно произошли изменения к лучшему, необходимо
                         изменить сам формат мирового общества с потребительского на созидательный и изменить мирным
                         путём. И это могут сделать только сами люди. Сегодня нам как человечеству так важно видеть то
                         общее будущее, к которому мы хотим прийти как единая общечеловеческая семья. </p>
                 </div>
             </section>
+
+            <section class="conference future_block">
+                <div class="conference_wrapper">
+                    <div class="conference_description">
+                        <div class="conference_description_wrapper">
+                            <p>
+                                Результатом международной конференции 11 мая стала мощная волна по всему миру в виде
+                                последующих международных конференций и телемостов, многочисленных круглых столов,
+                                интервью со специалистами из разных сфер, масштабных социальных видеоопросов на тему:
+                                <span class="conference_ask">«Нужно ли нам созидательное общество и каким мы его видим?».</span>
+                            </p>
+                            <p>
+                                Активная деятельность людей по всему миру показала на практике, что мы все можем
+                                объединиться в общей созидательной цели, если не будем перекладывать ответственность на
+                                кого-то и начнём вместе созидать на благо всего мирового сообщества.
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="conference_image">
+                        <img src="img/maxresdefault 2.svg" alt="" />
+                    </div>
+                </div>
+            </section>
+
+         
 
         </div>
     </main>
