--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         «АЛЛАТРА» объединит в одном онлайн-телемосте людей из 180 стран
                         мира в открытом глобальном диалоге:
                     </p>
-                    <span>«Хотим ли мы созидательное общество?»</span>
+                    <span class='chanse_ask'>«Хотим ли мы созидательное общество?»</span>
                 </div>
                 <div class="button_block">
                     <button class="chanse_button">ПРИСОЕДИНИТЬСЯ</button>
@@ -134,7 +134,8 @@
                                 Результатом международной конференции 11 мая стала мощная волна по всему миру в виде
                                 последующих международных конференций и телемостов, многочисленных круглых столов,
                                 интервью со специалистами из разных сфер, масштабных социальных видеоопросов на тему:
-                                <span class="conference_ask">«Нужно ли нам созидательное общество и каким мы его видим?».</span>
+                                <span class="conference_ask">«Нужно ли нам созидательное общество и каким мы его
+                                    видим?».</span>
                             </p>
                             <p>
                                 Активная деятельность людей по всему миру показала на практике, что мы все можем
@@ -150,8 +151,20 @@
                 </div>
             </section>
 
-         
-
+            <section class="chanse event_join">
+                <div class="chance_wrapper">
+                    <h3>Созидательные изменения начинаются с решения людей, и это решение становится началом будущего!
+                    </h3>
+                    <p>
+                        Масштабный телемост 9 мая 2020 года организуют сами люди своими силами в своих странах и
+                        регионах!
+                    </p>
+                    <span>Присоединяйтесь!</span>
+                </div>
+                <div class="button_block">
+                    <button class="chanse_button">ПРИСОЕДИНИТЬСЯ</button>
+                </div>
+            </section>
         </div>
     </main>
 </body>
