--- a/index.html
+++ b/index.html
@@ -165,6 +165,13 @@
                     <button class="chanse_button">ПРИСОЕДИНИТЬСЯ</button>
                 </div>
             </section>
+
+            <section class="rechtangle_43">
+                <div class="info_wrapper">
+                    <div>Международная конференция «<span class="soc_element">ОБЩЕСТВО</span>. ПОСЛЕДНИЙ ШАНС» 9 мая 2020.</div>
+                    <div>Объединяй и созидай!</div>
+                </div>
+            </section>
         </div>
     </main>
 </body>
