--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                     </div>
                     <div class="conference_image">
-                        <img src="img/Rectangle 23.svg" alt="" />
+                        <img src="img/Rectangle 23.svg" alt="" class="conf_img" />
                     </div>
                 </div>
             </section>
@@ -126,16 +126,17 @@
                 </div>
             </section>
 
-            <section class="conference future_block">
+            <!--Here-->
+
+            <section class="conference">
                 <div class="conference_wrapper">
                     <div class="conference_description">
-                        <div class="conference_description_wrapper">
+                        <div class="conference_description_wrapper future_block">
                             <p>
                                 Результатом международной конференции 11 мая стала мощная волна по всему миру в виде
                                 последующих международных конференций и телемостов, многочисленных круглых столов,
                                 интервью со специалистами из разных сфер, масштабных социальных видеоопросов на тему:
-                                <span class="conference_ask">«Нужно ли нам созидательное общество и каким мы его
-                                    видим?».</span>
+                                «Нужно ли нам созидательное общество и каким мы его видим?».
                             </p>
                             <p>
                                 Активная деятельность людей по всему миру показала на практике, что мы все можем
@@ -146,7 +147,7 @@
 
                     </div>
                     <div class="conference_image">
-                        <img src="img/maxresdefault 2.svg" alt="" />
+                        <img src="img/maxresdefault 2.svg" alt="" class="future_img" />
                     </div>
                 </div>
             </section>
@@ -168,8 +169,22 @@
 
             <section class="rechtangle_43">
                 <div class="info_wrapper">
-                    <div>Международная конференция «<span class="soc_element">ОБЩЕСТВО</span>. ПОСЛЕДНИЙ ШАНС» 9 мая 2020.</div>
+                    <div>Международная конференция «<span class="soc_element">ОБЩЕСТВО</span>. ПОСЛЕДНИЙ ШАНС» 9 мая
+                        2020.</div>
                     <div>Объединяй и созидай!</div>
+                </div>
+            </section>
+
+            <section class="rechtangle_25">
+                <div class="rechtangle_25_wrapper">
+                    <div class="rechtangle_25_img">
+                        <img src="img/Ellipse 1.svg" alt="" class='sensei_img'>
+                    </div>
+                    <div class="text_wrapper_25">
+                        <p>Мы бы уже сегодня жили бы в созидательном обществе, если бы вчера начали действовать.
+                            А вчера начали бы дейстаовать, если бы позавчера начали бы о нём говорить.
+                        </p>
+                    </div>
                 </div>
             </section>
         </div>
