add footer block

--- a/index.html
+++ b/index.html
@@ -176,17 +176,27 @@
             </section>
 
             <section class="rechtangle_25">
-                <div class="rechtangle_25_wrapper">
-                    <div class="rechtangle_25_img">
-                        <img src="img/Ellipse 1.svg" alt="" class='sensei_img'>
+                <div class="rechtangle_25_block">
+                    <div class="rechtangle_25_wrapper">
+                        <div class="rechtangle_25_img">
+                            <img src="img/Ellipse 1.svg" alt="" class='sensei_img'>
+                        </div>
+                        <div class="text_wrapper_25">
+                            <p>Мы бы уже сегодня жили бы в созидательном обществе, если бы вчера начали действовать.
+                                А вчера начали бы дейстаовать, если бы позавчера начали бы о нём говорить.
+                            </p>
+                        </div>
                     </div>
-                    <div class="text_wrapper_25">
-                        <p>Мы бы уже сегодня жили бы в созидательном обществе, если бы вчера начали действовать.
-                            А вчера начали бы дейстаовать, если бы позавчера начали бы о нём говорить.
-                        </p>
-                    </div>
+
                 </div>
             </section>
+
+            <footer class="footer">
+                <div class="footer_wrapper">
+                    <img src="img/Футер ОПШ 1.svg" alt="">
+                </div>
+
+            </footer>
         </div>
     </main>
 </body>
